hphp/hack/test/typecheck/reified_generics/function_soft_reification.php.exp
File "function_soft_reification.php", line 11, characters 3-11:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "function_soft_reification.php", line 5, characters 10-16:
  Definition is here
