hphp/hack/test/typecheck/reified_generics/function_soft_reification.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function erased<T>(): void {}
function reified<reify T>(): void {}

function call_keywordCheck(): void {
  erased();
  erased<int>();

  reified(); // bad
  reified<int>();
}
